# centralized-logging-with-vms-demo

./: .gitignore  README.md  Vagrantfile  configure-backend.sh  configure-frontend.sh  configure-opensearch.sh
fluent-bit/: parsers.conf
fluent-bit/backend/: fluent-bit.conf
fluent-bit/frontend/: fluent-bit.conf
nginx/: nginx.conf
opensearch/: docker-compose.yml
src/backend/: CMakeLists.txt  main.cpp  rebuild.sh
src/backend-rust/: Cargo.toml  rebuild.sh
src/backend-rust/src/: main.rs
src/frontend/: CMakeLists.txt  index.html  main.cpp  rebuild.sh
src/frontend-rust/: Cargo.toml  index.html  rebuild.sh
src/frontend-rust/src/: main.rs
tests/: test-setup.sh
