[package]
name = "fibonacci_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-appender = "0.2.3"
uuid = { version = "1.10.0", features = ["v4"] }
rouille = { version = "3.6.2" }
