[package]
name = "fibonacci_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.10.0", features = ["v4"] }
serde = { version = "1.0.210", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-appender = "0.2.3"
serde_json = "1.0.128"
rouille = { version = "3.6.2", default-features = false }
attohttpc = { version = "0.28.0", default-features = false, features = ["json"] }
